test/tests/operators/accept_udp/validation/error_endpoint_requires_host_port.txt
error: failed to parse endpoint
 --> tests/operators/accept_udp/validation/error_endpoint_requires_host_port.tql:5:12
  |
5 | accept_udp "127.0.0.1"
  |            ^^^^^^^^^^^ 
  |
